--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,8 @@
   position: relative;
   width: 280px;
   height: 260px;
-  background-color: var(--bg-color, #002145);
+  background-color: var(--bg-color, #ffffff);
+  color: #000;
   clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
   display: flex;
   flex-direction: column;
